# Astroids

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: block_action.cpp  block_action.h  block_actionmap.h  block_actionmap.tpl  block_actiontarget.h  block_actiontarget.tpl  block_collision.h  block_configuration.cpp  block_configuration.h  block_enemy.cpp  block_enemy.h  block_entity.cpp  block_entity.h  block_exeption.h  block_game.cpp  block_game.h  block_hyperspace.cpp  block_hyperspace.h  block_ki.cpp  block_ki.h  block_player.cpp  block_player.h  block_resource_manager.h  block_resource_manager.tpl  block_saucer.cpp  block_saucer.h  block_texture_loader.cpp  block_texture_loader.h  block_timer.cpp  block_timer.h  block_world.cpp  block_world.h
src/examples/: block_wars.cpp
